# hyprinertia

./: .gitignore  CMakeLists.txt  Makefile  README.md  hyprpm.toml
src/: main.cpp
